# BedtimeStoryTeller

./: .env.example  .gitignore  AI_CODING_GUIDELINES.md  AUDIO_FIX_SUMMARY.md  CLAUDE.md  INITIAL.md  README.md  demonstrate_fix.py  error.txt  fix_permissions.sh  fix_service_now.sh  pyproject.toml  pytest.ini  quick_fix_main.py  requirements.txt  run_tests.py  test_audio_fix.py  test_core_functionality.py  test_service_startup.py  test_simple.py  test_story_generation.py  test_web_interface.py  validate_system.py
.claude/: settings.local.json
PRPs/: bedtime-storyteller-gadget.md
examples/: README.md  cli_pattern.py  filesystem_structure.md
examples/agent/: agent.py  audio_player.py  providers.py
examples/tests/: conftest.py  test_agent.py
scripts/: setup.sh  storyteller-simple.service  storyteller.service  uninstall.sh  update.sh
storyteller/: main.py  simple_main.py
storyteller/config/: hardware_profiles.py  settings.py
storyteller/core/: agent.py  story_generator.py
storyteller/hal/: audio_devices.py  gpio_manager.py  interface.py
storyteller/providers/: base.py
storyteller/providers/llm/: gemini_provider.py  openai_provider.py
storyteller/providers/tts/: elevenlabs_tts.py  openai_tts.py
storyteller/storage/: models.py  story_library.py
storyteller/utils/: audio_utils.py  safety_filter.py
storyteller/wakeword/: loader.py  openwakeword_engine.py  porcupine_engine.py
storyteller/web/: app.py
storyteller/web/static/: app.css
storyteller/web/templates/: base.html  dashboard.html  settings.html  stories.html
tests/: conftest.py  test_utils.py
tests/hardware/: test_audio_system.py
tests/integration/: test_api_endpoints.py  test_story_pipeline.py
tests/unit/: test_agent_and_providers.py  test_api_fixes.py  test_config.py  test_safety_filter.py  test_web_app_init.py
